package seedu.address.model.supplier;

import static seedu.address.commons.util.CollectionUtil.requireAllNonNull;

import java.util.Collections;
import java.util.HashSet;
import java.util.Objects;
import java.util.Set;

import seedu.address.model.attribute.Email;
import seedu.address.model.attribute.Name;
import seedu.address.model.attribute.Phone;
import seedu.address.model.attribute.Remark;
import seedu.address.model.product.Product;

/**
 * Represents a Supplier in the address book.
 * Guarantees: details are present and not null, field values are validated, immutable.
 */
public class Supplier {

    // Identity fields
    private final Name name;
    private final Phone phone;
    private final Email email;

    // Data fields
    private final Remark remark;
    private final Set<Product> products = new HashSet<>();

    /**
     * Every field must be present and not null.
     */
    public Supplier(Name name, Phone phone, Email email, Remark remark, Set<Product> products) {
        requireAllNonNull(name, phone, email, remark, products);
        this.name = name;
        this.phone = phone;
        this.email = email;
        this.remark = remark;
        this.products.addAll(products);
    }

    public Name getName() {
        return name;
    }

    public Phone getPhone() {
        return phone;
    }

    public Email getEmail() {
        return email;
    }

    public Remark getRemark() {
        return remark;
    }

    /**
     * Returns an immutable product set, which throws {@code UnsupportedOperationException}
     * if modification is attempted.
     */
    public Set<Product> getProducts() {
        return Collections.unmodifiableSet(products);
    }

    /**
     * Returns true if both suppliers of the same name have at least one other identity field that is the same.
     * This defines a weaker notion of equality between two suppliers.
     */
    public boolean isSameSupplier(Supplier otherSupplier) {
        if (otherSupplier == this) {
            return true;
        }

        return otherSupplier != null
                && otherSupplier.getName().equals(getName())
                && (otherSupplier.getPhone().equals(getPhone()) || otherSupplier.getEmail().equals(getEmail()));
    }

    /**
     * Returns true if both suppliers have the same identity and data fields.
     * This defines a stronger notion of equality between two suppliers.
     */
    @Override
    public boolean equals(Object other) {
        if (other == this) {
            return true;
        }

        if (!(other instanceof Supplier)) {
            return false;
        }

        Supplier otherSupplier = (Supplier) other;
        return otherSupplier.getName().equals(getName())
                && otherSupplier.getPhone().equals(getPhone())
                && otherSupplier.getEmail().equals(getEmail())
                && otherSupplier.getRemark().equals(getRemark())
                && otherSupplier.getProducts().equals(getProducts());
    }

    @Override
    public int hashCode() {
        // use this method for custom fields hashing instead of implementing your own
        return Objects.hash(name, phone, email, remark, products);
    }

    @Override
    public String toString() {
        final StringBuilder builder = new StringBuilder();
        builder.append(getName())
                .append(" Phone: ")
                .append(getPhone())
                .append(" Email: ")
                .append(getEmail())
                .append(" Remarks: ")
                .append(getRemark())
                .append(" Products: ");
        getProducts().forEach(s -> builder.append(s.toStringForSupplier()));
        return builder.toString();
    }

}
